Fix CKAN data search mobile layout spacing and margins

--- a/modules/ytp-assets-common/resources/styles/main.css
+++ b/modules/ytp-assets-common/resources/styles/main.css
@@ -5156,7 +5156,7 @@ a:focus {
 }
 
 body {
-  background: url("../images/stamen_background.jpg?timestamp=1408476178725") 50% 50% fixed no-repeat;
+  background: url("../images/stamen_background.jpg?timestamp=1408477275849") 50% 50% fixed no-repeat;
   background-size: cover;
 }
 body.toolbar,
@@ -5186,7 +5186,7 @@ h4 {
   display: block;
   width: 21px;
   height: 25px;
-  background-image: url('../images/sprite.png?timestamp=1408476178725');
+  background-image: url('../images/sprite.png?timestamp=1408477275849');
   background-repeat: no-repeat;
   background-position: -56px -24px;
   float: left;
@@ -5196,7 +5196,7 @@ h4 {
   float: left;
   width: 21px;
   height: 24px;
-  background-image: url('../images/sprite.png?timestamp=1408476178725');
+  background-image: url('../images/sprite.png?timestamp=1408477275849');
   background-repeat: no-repeat;
   background-position: -56px 0px;
   margin-right: 8px;
@@ -5444,7 +5444,7 @@ label.checkbox-inline:after {
 }
 .btn-default.btn-lg {
   color: #ffffff;
-  background: url("../images/button-lg-gradient.png?timestamp=1408476178725") repeat-x;
+  background: url("../images/button-lg-gradient.png?timestamp=1408477275849") repeat-x;
   height: 63px;
 }
 .add-member-or {
@@ -5831,16 +5831,21 @@ li.ytp-menulink.active > a.active {
   }
   [role=main] .secondary {
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 12px;
   }
   section.module {
-    margin: 20px 0;
+    margin: 0 0;
+    margin-bottom: 8px;
   }
   h2.module-heading {
     margin: 0;
   }
+  .module-footer {
+    margin-bottom: 0;
+  }
   .panel-heading {
     padding: 0 15px;
+    padding-top: 6px;
   }
   .panel-body {
     padding: 0;
@@ -5866,7 +5871,7 @@ li.ytp-menulink.active > a.active {
 .well.infowell .infowell-icon {
   width: 46px;
   height: 76px;
-  background-image: url('../images/sprite.png?timestamp=1408476178725');
+  background-image: url('../images/sprite.png?timestamp=1408477275849');
   background-repeat: no-repeat;
 }
 .well.infowell.infowell-dark {
