--- a/modules/ytp-assets-common/src/less/responsive.less
+++ b/modules/ytp-assets-common/src/less/responsive.less
@@ -49,19 +49,25 @@
 
   [role=main] .secondary {
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 12px;
   }
 
   section.module {
-    margin: 20px 0;
+    margin: 0 0;
+    margin-bottom: 8px;
   }
 
   h2.module-heading {
     margin: 0;
   }
 
+  .module-footer {
+    margin-bottom: 0;
+  }
+
   .panel-heading {
     padding: 0 15px;
+    padding-top: 6px;
   }
 
   .panel-body {
